--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "passport-restify-node",
   "version": "0.4.0",
-  "description": "Simple, unobtrusive authentication for Node.js.",
+  "description": "Simple, unobtrusive authentication for restify Node.js.",
   "keywords": [
-    "express",
+    "restify",
     "connect",
     "auth",
     "authn",
